refactor(settings): add 'filterings' to cSpell.ignoreWords for improved spell checking
Adds 'filterings' to spell checker ignore list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "file:/**/*.csv": "jupyter-data-wrangler"
     },
     "cSpell.ignoreWords": [
+        "filterings",
         "pmid"
     ]
 }
