Update VS Code settings for Python formatting and analysis
Switches to Pylance as the Python language server and sets the default formatter to Ruff for improved code quality and performance.
Removes hardcoded mypy executable paths to support more flexible environments.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "mypy.dmypyExecutable": "${workspaceFolder}/.venv/Scripts/dmypy.exe",
+    "mypy.dmypyExecutable": "",
     "mypy.envFile": "",
-    "mypy.mypyExecutable": "${workspaceFolder}/.venv/Scripts/mypy.exe",
+    "mypy.mypyExecutable": "",
     "mypy.runUsingActiveInterpreter": true,
     "cSpell.words": [
         "analyser",
@@ -23,5 +23,7 @@
     "cSpell.ignoreWords": [
         "filterings",
         "pmid"
-    ]
+    ],
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "python.languageServer": "Pylance"
 }
