--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "openai>=2.0.0",
     "spacy>=3.8.7",
     "nltk>=3.9.2",
+    "xmltodict>=1.0.2",
 ]
 
 [project.optional-dependencies]
@@ -39,6 +40,7 @@ dev = [
   { include-group = "lint" },
   { include-group = "test" },
   { include-group = "types" },
+  "ipykernel>=6.30.1",
   "pandas-stubs>=2.3.2.250926",
 ]
 
