Improves enrichment robustness and error reporting
Integrates exponential backoff retry logic and global rate limiting for all enrichment API calls to handle rate limits and network errors more reliably.

Enhances error logging and provenance tracking to capture detailed failure reasons for abstract retrieval, storing them in records and reporting them in enrichment summaries.

Refactors enrichment modules to unify error handling and request logic, making future maintenance and debugging easier.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,11 @@ build-backend = "uv_build"
 line-length = 100
 exclude = [".venv", "tests/data/fixtures"]
 target-version = "py311"
+# extend-ignore = ["T201"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B", "C4", "T20", "SIM", "RUF"]
-ignore = ["E501"]
+ignore = ["E501","T201"]
 
 [tool.mypy]
 python_version = "3.11"
