--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "spacy>=3.8.7",
     "nltk>=3.9.2",
     "xmltodict>=1.0.2",
+    "beautifulsoup4>=4.14.2",
+    "markdownify>=1.2.0",
+    "lxml>=6.0.2",
 ]
 
 [project.optional-dependencies]
