--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "analyser",
         "europepmc",
         "openalex",
+        "pandoc",
         "pubmed",
         "semanticscholar"
     ],
